# ros2_exam_2025

./: README.md
exam_launch/: CMakeLists.txt  package.xml
exam_launch/launch/: system_bringup.example.launch.py  system_bringup.submission.launch.py
exam_launch/scripts/: pub_env_info.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: visualize_robot.rviz
robot_description/launch/: robot_description.launch.py  visualize_robot_in_rviz2.launch.py
robot_description/urdf/: imu.urdf.xacro  laser_scan.urdf.xacro  properties.urdf.xacro  robot.urdf.xacro  robot_gz_diff_drive_plugin.urdf.xacro  robot_lidar_mount.urdf.xacro  robot_standalone.urdf.xacro  robot_utils.urdf.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/config/: robot_gz_bridge.yaml  robot_gz_bridge_with_tf.yaml
robot_gazebo/hooks/: add_gazebo_resource.sh.in
robot_gazebo/launch/: robot_gazebo.launch.py
robot_gazebo/worlds/: empty.world  ros2_exam.world
robot_gazebo/worlds/models/turtlebot3_world/: model.sdf
robot_navigation/: CMakeLists.txt  package.xml  simple_occupancy_layer.xml
robot_navigation/config/: map_params.yaml  nav2_exam_view.rviz  nav2_params.yaml  waypoints.yaml
robot_navigation/install/arm/: custom_map_saver_server
robot_navigation/install/x86/: custom_map_saver_server
robot_navigation/launch/: nav2_bringup.launch.py  robot_navigation.launch.py
robot_navigation/maps/: ros2_exam.yaml
robot_navigation/scripts/: publish_waypoints.py
robot_navigation/src/: DummyLocalization.cpp  FollowWaypointsActionClient.cpp  UpdateOccupancy.cpp
