<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exam_launch</name>
  <version>0.0.0</version>
  <description>System launch files for the exam</description>
  <maintainer email="lterenzi@mavt.ethz.ch">Lorenzo Terenzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>