<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.1.1</version>
  <description>Basic robot description</description>
  <maintainer email="lterenzi@mavt.ethz.ch">Lorenzo Terenzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>