<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_navigation</name>
  <version>0.1.0</version>
  <description>Robot navigation package</description>
  <maintainer email="lterenzi@mavt.ethz.ch">Lorenzo Terenzi</maintainer>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>